@@ -1,8 +1,9 @@
 homevent (0.2.3) unstable; urgency=low
 
   * Started moving to @inlineCallbacks style where appropriate
+  * Allow incoming network connections
 
- -- Matthias Urlichs <smurf@debian.org>  Mon, 19 Nov 2007 03:02:38 +0100
+ -- Matthias Urlichs <smurf@debian.org>  Mon, 19 Nov 2007 04:01:36 +0100
 
 homevent (0.2.2) unstable; urgency=low
 
